GL/src/test/deca/context/invalid/deca_complet/new.deca
// Description :
// utilisation de new sur un type qui n'est pas une classe
//
// Resultat :
// Erreur contextuelle
// Ligne 11 :  int nest pas un type classe
//
// Historique:
//    cree le 19/01/2026
{
    int x = new int();
}